--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,10 +20,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        # pip install pytest
 
     - name: Run tests
       run: |
         pwd
         ls -ltr
-        python pytest github_pipline_tests/test_commit.py
+        python github_pipline_tests/test_commit.py
