--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,14 @@
 name: My First GitHub Actions
 
 on: [push]
-
+  workflow_dispatch:
+    inputs:
+      metric_name:
+        description: 'this parameter will generated as the prometheus metric name'
+        default: 'bombastic'
+        required: true
+        type: string
+        
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,6 +18,9 @@ jobs:
         python-version: [3.9]
 
     steps:
+    - name: print metric_name value
+      run: |
+        echo The value is ${{ inputs.metric_name }}
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v2
