--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
     - name: Set environment variable for metric name
       env:
-        METRIC_NAME: "${{ inputs.metric_name }}"
-      run: echo "${{ METRIC_NAME }}"
+        METRIC_NAME: ${{ inputs.metric_name }}
+      run: echo ${{ METRIC_NAME }}
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v2
