--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Set environment variable for metric name
       env:
         METRIC_NAME: ${{ inputs.metric_name }}
-      run: echo ${{ METRIC_NAME }}
+      run: echo $METRIC_NAME
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v2
